<resources>
    <string name="app_name">Strooper2</string>
    <string name="jugar">Jugar</string>
    <string name="puntaje">Puntaje</string>
    <string name="configuracion">Configuración</string>
    <string name="correcto">Correcto</string>
    <string name="incorrecto">Incorrecto</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="palabrascorrectas">Palabras Correctas</string>
    <string name="palabrasincorrectas">Palabras Incorrectas</string>
    <string name="tiempodereaccion">Tiempo de Reacción</string>
    <string name="casita">Casita</string>
    <string name="menu">Menú</string>
    <string name="segundo">Segundo</string>
    <string name="primero">Primero</string>
    <string name="tercero">Tercero</string>
</resources>
